add HOC Spinner

--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -14,7 +14,7 @@
     margin-bottom: 5px;
   }
 
-  .custom-button {
+  button {
     width: 80%;
     top: 255px;
     position: absolute;
@@ -26,7 +26,7 @@
     .image {
       opacity: 0.8;
     }
-    .custom-button {
+    button {
       display: inline;
       opacity: 0.85;
     }
